added test cases to RInChIDecompositionTest, RInChIGeneratorTest and RInChIToReactionTest